--- a/app/css/manage.css
+++ b/app/css/manage.css
@@ -35,3 +35,50 @@
   .headingFont{
     color:#444a6f;
   }
+
+
+
+@media (max-width: 1200px) { 
+  .meetingContainer{
+    width: 678px;
+  }
+}
+@media (max-width: 992px) { 
+  .meetingContainer{
+    width: 459px;
+  }
+}
+@media (max-width: 768px) { 
+  .actContainer{
+  margin-right: 0px !important;
+
+  }
+  .meetingContainer{
+    width: 60%;
+    float: right;
+  }
+
+}
+@media (max-width: 680px) { 
+  .actContainer{
+  margin-right: 0px !important;
+
+  }
+  .meetingContainer{
+    width: 57%;
+    float: right;
+  }
+
+}
+
+@media (max-width: 630px) { 
+  .actContainer{
+  width:100% !important;
+
+  }
+  .meetingContainer{
+    width: 100%;
+
+  }
+
+}
